Updated doc(putEnv syntax) and checked putEnv

--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -140,7 +140,7 @@ varAssign $\rightarrow$ getter $"="$ expr $";"$ \\
 
 envFunc $\rightarrow$ $"reset"$ id $";"$ \\
 $\vert$ $"run"$ id $"with"$ expr $"iterations"$ $";"$\\
-$\vert$ $"put"$ id $"in"$ id $"at"$ expr $","$ expr  $";"$\\
+$\vert$ $"put"$ expr $"in"$ id $"at"$ expr $","$ expr  $";"$\\
 
 \underline{Bodies}: \\
 
